Add experimental methods, more detailed discussion, and other miscellaneous items

--- a/content/03.results.md
+++ b/content/03.results.md
@@ -34,18 +34,10 @@ The importance of connectivity could also be considered in a treatment context. 
 ### Data vignettes
 In order to demonstrate the added utility of <i>Metaboverse</i> to the community that is not currently available in other tools, we used <i>Metaboverse</i> to analyze a series of public and new datasets. From the vignettes provided below, we show that <i>Metaboverse</i> not only is able to identify points of interest previously described or expected, but can rapidly identify for the user unexpected and systematic regulatory patterns in a reaction network context.
 
-#### 1. Perturbation of mitochondrial fatty acid synthesis reveals expected and unexpected reaction motifs.
+#### 1. Perturbation of mitochondrial fatty acid synthesis across time reveals expected and unexpected reaction motifs.
 
 
+#### 2. Flux data (in progress)
 
 
-#### 2. Time-course (in progress)
-
-
-#### 3. Flux data (in progress)
-
-
-### Performance
-
-Table 1. Performance break-down    
-Table 2. Comparison to existing tools
+#### 3. Previously published data (in progress)
