Very preliminary notes on mct1 dataset analysis

--- a/content/03.results.md
+++ b/content/03.results.md
@@ -39,18 +39,18 @@ Mitochondrial fatty acid synthesis (mtFAS) acts as an important metabolic pathwa
 
 <i>MCAT</i>, or <i>mct1</i>in <i>Saccharomyces cerevisiae</i>, is an acyltransferase responsible for the transfer of a malonyl group from malonyl-CoA to <i>NDUFAB1</i>, the mitochondrial acyl carrier protein and a subunit of the NADH dehydrogenase complex [?]. By knocking out this gene, one can simulate the effects of a disruption in mtFAS.
 
-In order to probe the relationship between mtFAS and metabolic from a systematic perspective, we used a <i>mct1&Delta;</i> model in <i>Saccharomyces cerevisiae</i> to measure steady state proteomics and transcriptomics at 12 hours after a shift to a respiratory carbon source, as well as steady state metabolomics at 0, 15, 30, 60, and 180 minutes after this shift in carbon source. From our previous work in our model and analyses of the data, we expected to observe effects such as ...____.
+In order to probe the relationship between mtFAS and metabolic from a systematic perspective, we used a <i>mct1&Delta;</i> model in <i>Saccharomyces cerevisiae</i> to measure steady state proteomics and transcriptomics at 12 hours after a shift to a respiratory carbon source, as well as steady state metabolomics at 0, 15, 30, 60, and 180 minutes after this shift in carbon source. By layering these data onto the <i>Saccharomyces cerevisiae</i> metabolic network using <i>Metaboverse</i>, we observed interesting respiratory signatures as expected based on our previous work. For example, using Metaboverse, we noticed a strong pattern in the electron transfer from ubiquinol to cytochrome C of complex III of the electron transport chain (ETC) (Figure @fig:mct1_vignette A). At the proteomics level, cytochrome C component proteins, CYC1 and CYC7 are both significantly reduced in concentration compared to wild-type cells (log<sub>2</sub>(fold change): -1.57 & -0.88; p-value: < 0.01 & < 0.01; respectively). This reduction in cytochrome C concentration is paired with a marked reduction in concentration of the protein components of cytochrome C reductase, which is a catalyst of this electron transfer reaction (average log<sub>2</sub>(fold change) of all measured protein components = -2.03, where 9/11 component proteins were measured. Range of log<sub>2</sub>(fold change) values: -0.34 to -3.21; all p-values below 0.01).   
 
-By layering these data onto the metabolic network using <i>Metaboverse</i>, we observed ...___.
+![
+  **Metaboverse identifies several reaction motifs of interest in <i>mct&Delta;</i> cells.**
+  (A) (B) (C) . All panels shown used the 180 min. metabolomics values for node shading.
+](./content/figures/fig_mct1.png "Square image"){#fig:mct1_vignette}
 
-Interestingly, we also were able to observe ...___.
+A second pattern of interest that we expect in this model is the conversion of Succinate to Fumarate by the Succinate dehydrogenase complex (SDH, or Complex II of the ETC) (Figure @fig:mct1_vignette B). We know from previous work that complex assembly and mtFAS are intricately connected [@doi:10.1016/j.cub.2018.08.022; @doi:10.1101/2020.05.09.086199]. However, this particular behavior when pairing the temporal metabolomics data with the steady-state proteomics data is interesting and acts as a potential jumping-off point for further follow up experimentation. Across each time point, we see a steady accumulation of fumarate (log<sub>2</sub>(fold change) >= 1). We pair this with the proteomics data and observe a strong reduction in both SDH and FUM1, which encodes the fumarase needed to convert fumurate to malate in the TCA cycle (-0.49 to -2.96). It is possible that the reduction of FUM1 and build-up of fumurate is acting as a bottleneck and signaling a reduction in Complex II component production and assembly. However, as measurements for succinate and malate are missing, it is difficult to clarify this regulation more without further follow-up experiments.  
 
-Based on these novel findings in this model, it is plausible that ...___.
+A final observation of interest from analysis through Metaboverse is that of citrate and isocitate. Normally, the TCA cycle generates citrate from malate to oxaloacetate via MDH1, then oxaloacetate to citrate via CIT1 and CIT3. Building off the observations discussed above, we expect lower levels of malate as due to decreased MDH1. We also observe lower levels of CIT1 (-1.46) and reciprocal decreases in citrate that worsens across the time-course. However, at 30 minutes post-carbon source shift, isocitrate levels are decreased by -1.38 log<sub>2</sub>(fold change) (p-value < 0.01). By 60 and 180 minutes, there is no significant change in isocitrate levels compared to wild-type cells, while citrate levels remain significantly reduced (Figure @fig:mct1_vignette C). Does this indicate some sort of adaptation to a respiratory-required environment with ETC-impaired cells?
 
-In order to validate this finding, we ...___ (in progress). We found that ...___.
-
-
-
+By analyzing this multi-omics dataset using reaction motif analysis and other interactive visualization, interesting questions arise. We see several reaction motifs that are expected based on prior knowledge of this biological model, as well as other interesting behaviors worthy of further follow-up. This demonstrates the potential Metaboverse has to act as a valuable hypothesis-generation tool, as well as a convenient platform for visualization and analysis of a user's dataset in the context of the metabolic or other reaction networks.
 
 #### 2. Flux data (in progress)
 
